[package]
name = "ssb-causal-sort"
version = "0.1.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssb-multiformats = {git="https://github.com/sunrise-choir/ssb-multiformats"}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
pathfinding = "2.0"
daggy = "0.6.0"
petgraph = "0.4.11"
