[package]
name = "ssb-causal-sort"
version = "0.1.1"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
description = "Causally sort a collection of scuttlebutt messages."
license = "LGPL-3.0"
edition = "2018"

[dependencies]
ssb-multiformats = "0.4" 
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
daggy = "0.6.0"
petgraph = "0.4.11"
